--- a/src/app/consolation-scores/consolation-scores.component.html
+++ b/src/app/consolation-scores/consolation-scores.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container h-100">
     <div class="row">
         <div class="col-md-6 mb-4">
             <div class="form-floating">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row flex-grow-1">
         <div *ngIf="team1 && week" class="col-md-6 mb-4">
             <div class="card text-center">
                 <div class="card-header">
